--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,12 @@
 version: '3'
 
 services:
+  redis:
+    image: redis
+    ports:
+      - "6379:6379"
+    container_name: redis
+
   zookeeper:
     image: wurstmeister/zookeeper
     restart: unless-stopped
