Update Kafka Config Into Property file
Update Kafka Config Into Property file

--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -9,7 +9,8 @@ spring:
     database: 0
     host: localhost
     port: 6379
-
+  kafka:
+    bootstrap-servers: localhost:9092
 
 mybatis:
   type-aliases-package: com.shan.tech.javlib.pojo
